# jeu_nim

./: CMakeLists.txt  README.md  README.txt  codage_numerique.c  codage_numerique.h  codage_numerique_test.c  m_distributions.c  m_distributions.h  main.c  nim.c  nim.h  nim_ihm.c  nim_ihm.h  nim_io.c  nim_io.h  nim_test.c
